# gameInC

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  vcpkg_rf.txt
cmake/: FindSDL2.cmake
src/: Game.cpp  Game.h  main.cpp
src/Core/: Game.cpp  Game.h  GameObject.cpp  GameObject.h  TextureManager.cpp  TextureManager.h
src/Core/Private/: Game.cpp  GameObject.cpp  Map.cpp  TextureManager.cpp
src/Core/Public/: Components.h  ECS.h  Game.h  GameObject.h  Map.h  TextureManager.h
